# simple-fractals

./: CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
.github/workflows/: ci.yml
include/: App.hpp  AppState.hpp  Projection.hpp  ProjectionSource.hpp  State.hpp
src/: App.cpp  AppState.cpp  Projection.cpp  ProjectionSource.cpp  State.cpp  main.cpp
